Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
Impala 2.3.0
-
ghx-label-4
Description
select milliseconds_add("1970-01-01", -10000000000000);
release build: result = 2237-09-01 05:47:53.709551616 (should be 1653-02-10 06:13:20)
debug build: timestamp-functions-ir.cc:740] Check failed: result_value < input_value (2237-09-01 05:47:53.709551616 vs. 1970-01-01 00:00:00)
seconds/microseconds_add work correctly with the same timestamp
Attachments
Issue Links
- relates to
-
IMPALA-1675 Timestamp: Adding/subtracting very large time intervals to timestamps produces incorrect result
- Resolved